# python-captcha-solver

./: .env.example  .gitignore  README.md  getHanabiCode.ipynb  pyproject.toml  setChromePath.py
src/python_captcha_solver/: __init__.py
